external-crates/move/crates/move-compiler/tests/development/enums/parser/mut_match.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/parser/mut_match.move:2:17
  │
2 │     public enum Option<T> {
  │                 ^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

warning[W09012]: unused 'mut' modifiers
   ┌─ tests/development/enums/parser/mut_match.move:11:30
   │
11 │          Option::Other { mut x } => x,
   │                          --- ^ The variable 'x' is never used mutably
   │                          │    
   │                          Consider removing the 'mut' declaration here
   │
   = This warning can be suppressed with '#[allow(unused_let_mut)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

